@@ -1,3 +1,9 @@
+2021-07-02  Nick Clifton  <nickc@redhat.com>
+
+	PR 28046
+	* dwarf2.c (read_ranges): Check that range_ptr does not exceed
+	range_end.
+
 2021-06-30  YunQiang Su  <yunqiang.su@cipunited.com>
 
 	PR mips/28009
